เพิ่มนู้นเพิ่มนี้เพิ่มนั้น
